@@ -229,3 +229,41 @@ For map modes, the destination protocol is: create `world` atomically with POSIX
 
 - The safe publication protocol intentionally requires a provider exposing POSIX permissions and atomic directory moves; providers such as ZIP filesystems are rejected rather than risking visible incomplete content.
 - A caller with authority to bypass the provider's POSIX access controls is outside the ordinary reader/creator contract; identity and mode checks still reject path replacement observed before publication.
+
+## Fix Round 4
+
+### Findings fixed
+
+- Added `NoReplaceDirectoryPublisher`, a reflective JDK Foreign Function & Memory adapter for Linux `renameat2(RENAME_NOREPLACE)`. The adapter supports only the Linux default file-system provider, requires the JDK Foreign Function & Memory API and native access, probes both successful publication and refusal to replace an existing directory, and fails closed for every unsupported OS, provider, runtime, missing symbol, or disabled capability. There is no shell/native helper process, `REPLACE_EXISTING`, provider-level atomic-move fallback, or copy fallback.
+- Lobby publication now performs the final destination check and invokes the kernel no-replace directory publication directly from the fully validated sibling extraction. The public `world` path is absent until the complete map appears atomically; a populated, empty, or delete/recreated creator target wins the no-replace race and is preserved.
+- Capability-probe cleanup is non-recursive over the known direct probe paths, restores mode-000 reservations before deletion, does not follow replacement symlinks, and attaches cleanup failures as suppressed exceptions so the unsupported-capability error remains primary.
+
+### Runtime capability
+
+- The supported normal path is the repository's Java 21 runtime on Linux with `--enable-preview` and `--enable-native-access=ALL-UNNAMED`; the Gradle test/application tasks and runtime JAR manifest carry these settings. Java 21's `Arena.allocateUtf8String` and newer JDKs' `Arena.allocateFrom` are handled reflectively. Linux providers without `renameat2` or a JDK FFM implementation fail closed.
+
+### Focused tests
+
+- Updated `LobbyMapInstallerTest` coverage for reader visibility while extraction is private (the public world is absent), populated and empty final-window creators, deterministic delete/recreate races, unsupported providers, and temporary archive/extraction/probe cleanup.
+- Verification command:
+
+```text
+./gradlew -p network :runtime:test --rerun-tasks --tests '*ConfigurationSafetyTest' --tests '*ArtifactSafetyTest' --tests '*LobbyMapInstallerTest' --tests '*MinecraftStatusProbeTest'
+```
+
+Result: `BUILD SUCCESSFUL`; 28 focused tests completed with zero failures or errors (12 `LobbyMapInstallerTest` cases).
+
+No formatter, linter, project-wide build, or project-wide test command was run.
+
+### Files
+
+- `network/runtime/src/main/kotlin/io/github/developmentnetwork/runtime/artifact/NoReplaceDirectoryPublisher.kt`
+- `network/runtime/src/main/kotlin/io/github/developmentnetwork/runtime/artifact/LobbyMapInstaller.kt`
+- `network/runtime/src/test/kotlin/io/github/developmentnetwork/runtime/LobbyMapInstallerTest.kt`
+- `network/runtime/build.gradle.kts`
+- `network/src/main/kotlin/io/github/developmentnetwork/RuntimeArtifactLauncher.kt` (passes the required preview/native-access flags when launching the embedded runtime)
+
+### Residual risks
+
+- Safe publication is intentionally Linux-only and depends on the kernel `renameat2` syscall exposed through libc/JDK FFM; other OSes and providers fail closed rather than weakening the immutable-world contract. The runtime must retain the configured preview/native-access capability.
+- The installer guarantees no replacement by its publication operation, but a separate privileged same-user actor can still delete a world after it has been published; that actor is outside the installer lifecycle contract.
